fix all players